--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,15 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
-
-group 'org.example'
-version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+    testImplementation (
+            "com.codeborne:selenide:6.7.4",
+            "org.junit.jupiter:junit-jupiter:5.8.2")
 }
 
 test {
